--- a/package.json
+++ b/package.json
@@ -3,15 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-sass": "^4.12.0",
+    "prop-types": "^15.7.2",
     "react": "^16.10.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.10.0",
-    "react-scripts": "3.1.2"
+    "react-icons": "^3.7.0",
+    "react-input-mask": "^2.0.4",
+    "react-parallax": "^2.2.3",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^5.1.1",
+    "react-scripts": "3.1.2",
+    "react-sticky-box": "^0.8.0",
+    "shortid": "^2.2.15",
+    "styled-components": "^4.4.0",
+    "video-react": "^0.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "yarn build && aws s3 sync ./build s3://vamosachina.com.br"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -27,5 +40,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.14.3",
+    "prettier": "^1.18.2"
   }
 }
